--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.0.0",
     "groq-sdk": "^0.3.3",
+    "jose": "^6.1.3",
+    "lru-cache": "^11.2.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18.3.1",
